fixed layout and index file. imgs not showing up.

--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -7,10 +7,19 @@ body {
 }
 
 a {
-  color: inherit;
+  color: goldenrod;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
